Working solution for cropped images fixed height

--- a/src/main/resources/static/css/trainstylesheet.css
+++ b/src/main/resources/static/css/trainstylesheet.css
@@ -96,6 +96,10 @@ h4 {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
 }
 
 .about {
